public/css/base.css
/*Normalize*/
* {
  box-sizing: border-box;
}

/*Firefox Fix*/
button::-moz-focus-inner {
  border:0;
  padding:0;
}

/*Opera Fix*/
input:focus, textarea:focus, keygen:focus, select:focus {
  outline-offset:0;
}
html.opera body + div[is-visible] {
  display: none !important;
}

html.opera label div {
  position: relative;
}
html.opera label select {
  -webkit-appearance: none;
}
html.opera label div::after {
   align-items: center;
   pointer-events: none;
   font-family: "FontAwesome";
   content: '\f078';
   position: absolute;
   text-align: center;
   vertical-align: middle;
   line-height: inherit;
   font-size: 0.8em;
   top: 0;
   right: 0;
   bottom: 0;
   width: 18px;
   padding-top: 10px;
}
html.opera label:hover div::after {
   background: rgba(0,0,120,0.1);
}

/*Opera/Chrome fix */
:focus {
    outline: none;
}
/*=========*/

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  color: #000;
  text-align: center;
  background: #f1f1f1;
  font-family: Verdana,sans-serif;
  font-size: 13px;
  line-height: 1.5em;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  min-width: 270px;
}

article,
aside,
footer,
header,
nav,
section {
  display: block;
}

h1, h2 {
  font-size: 1.25em;
  font-size-adjust: 0.75;
  -ms-text-size-adjust: 0.75;
  -webkit-text-size-adjust: 0.75;
  line-height: 1.06;
  text-shadow: 0 0.05em 0.03em rgba(0,0,0,0.3);
  font-weight: normal;
}
h1, .subheading {
  border-bottom: 1px solid rgba(0,0,150, 0.3);
}
h1 {
  padding-bottom: 15px;
}
h1, h1 a, h2, h2 a {
  color: rgb(102,102,184);
}

hr {
  height: 0;
  overflow: visible;
}

pre {
  font-family: monospace, monospace;
  font-size: 1em;
}

/* IE 10 IOS/Safari 8+ */
a {
  background-color: transparent; /* 1 */
  -webkit-text-decoration-skip: objects; /* 2 */
}

abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}

/* IOS 4-7 */
audio:not([controls]) {
  display: none;
  height: 0;
}

/* IE */
textarea {
  overflow: auto;
}

/* IE9- */
audio,
video {
  display: inline-block;
}

/* IE10- */
[type="checkbox"], [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

/*Chrome*/
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details, menu {
  display: block;
}

summary {
  display: list-item;
}

canvas {
  display: inline-block;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

/*end normalize*/

div.group {
  overflow: hidden;
}

table, tr, td {
  table-layout: fixed;
  border-collapse: collapse;
  border-spacing: 0;
  padding: 0;
  margin: 0;
}
table.auto, table.auto tr, table.auto td {
  table-layout: auto;
}

table {
  width: 100%;
}

.featured .scoring {
  text-align: center;
}
.featured .scoring span {
  display: inline-block;
  min-height: 0;
  padding: 5px;
  border-radius: 3px;
}
.featured .scoring .score {
  color: #000;
  border: 1px solid #d6d6d6;
  border-bottom-color: #cacaca;
  border-top-color: #e2e2e2;
  background: #f8f8f8;
}
.featured .scoring .like {
  color: #fff;
  border: 1px solid #699739;
  border-bottom-color: #638f36;
  border-top-color: #6fa03c;
  text-shadow: -1px -1px #699739;
  background: #7bb042 !important;
}
.featured .scoring .dislike {
  color: #fff;
  border: 1px solid #a73535;
  border-bottom-color: #9d3232;
  border-top-color: #b03838;
  text-shadow: -1px -1px #a73535;
  background: rgb(236, 72, 72) !important;
}
.featured .scoring .comments {
  color: #fff;
  border: 1px solid #3480b5;
  border-bottom-color: #3179ab;
  border-top-color: #3787bf;
  text-shadow: -1px -1px #3480b5;
  background: #3d95d3 !important;
}

.featured .description {
  overflow: hidden;
  max-height: 200px;
}
.featured .description img,
.featured .description div {
  display: none;
}

.post {
  width: 100%;
}
.post + .post {
  margin-top: 10px;
  border-top: 1px solid rgba(0,0,150, 0.3);
}
.post .avatar {
  float: left;
  max-width: 100%;
  max-height: 240px;
  margin-right: 10px;
  margin-bottom: 5px;
}
.description a {
  font-weight: initial;
}
@media(min-width: 450px) {
  .artist-bio .post .title {
    margin-left: 240px;
  }
}

.genre-icon {
  float: left;
  color: #a66ebe;
}

.post .genre-icon {
  margin-right: 10px;
}

.tag-header {
  vertical-align: middle;
  height: 8em;
  padding-top: 1em;
}
.tag-header .title {
  font-size: 1.5em;
  padding: 0;
  line-height: 0.5em;
}

.post .tag-header {
  margin-left: 8em;
}

.post .subheading {
  margin-bottom: 10px;
}

.avatar {
  display: inline-block;
  overflow: hidden;
  width: 150px;
  height: 150px;
  border-radius: 100%;
  background: no-repeat center rgb(178,230,251);
}
.avatar span, .genre-icon i::before, .genre-icon i {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  background: no-repeat center/cover;
}
.avatar span {
  box-shadow: 0 0 10px -5px #000 inset, 0 0 1px 0 #000;
}
.avatar.large {
  width: 240px;
  height: 240px;
}
.avatar.medium {
  width: 60px;
  height: 60px;
}
.avatar.small {
  width: 30px;
  height: 30px;
}

.hovercard {
  position: absolute;
  transition: transform 0.5s ease;
  transform-origin: 0 0;
  transform: scale(0,0);
  top: 50%;
  left: 50%;
  z-index: 200;
  margin: -20px;
}
.post .hovercard .avatar {
  float: none;
  margin: 0px;
}
.hovercard li {
  list-style: none;
}
.user-link {
  position: relative;
}
.description .user-link, .comment-content .user-link {
  color: #000;
  text-decoration: none;
  font-weight: bold;
}
.description .user-link:before, .comment-content .user-link:before {
  content: '@';
}

.hovercard.shown {
  transform: scale(1,1);
}

.post > * {
  vertical-align: top;
}
.post .space-fix {
  display: block;
  overflow-y: hidden;
}
/* ... */

